--- a/style.css
+++ b/style.css
@@ -257,9 +257,9 @@ main h2{
 }
 .product-details{
     position: absolute;
-    top: 95px;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     border-radius: 10px;
     width: 80%;
     background-color: white;
@@ -337,7 +337,6 @@ main h2{
 
 @media only screen and (max-width:870px) {
     .product-details{
-        top: 50px;
         width: 70%;
         flex-direction: column;
     }
@@ -379,7 +378,6 @@ main h2{
         padding: 30px 30px;
     }
     .product-details{
-        top: 20px;
         width: 70%;
         flex-direction: column;
     }
